Fix group title spacing

--- a/.build/assets/styles/__blocks/_group.scss
+++ b/.build/assets/styles/__blocks/_group.scss
@@ -13,12 +13,12 @@
 			padding-top: var(--unit);
 			padding-bottom: var(--unit);
 
-			h1,
-			h2,
-			h3,
-			h4,
-			h5,
-			h6 {
+			> h1,
+			 > h3,
+			 > h4,
+			 > h5,
+			 > h6,
+			> h2 {
 				&:first-child {
 					margin-bottom: var(--unit);
 				}
@@ -35,12 +35,12 @@
 			padding-top: var(--unit-medium);
 			padding-bottom: var(--unit-medium);
 
-			h1,
-			h2,
-			h3,
-			h4,
-			h5,
-			h6 {
+			> h2,
+			 > h3,
+			 > h4,
+			 > h5,
+			 > h6,
+			> h1 {
 				&:first-child {
 					margin-bottom: var(--unit-medium);
 				}
@@ -57,12 +57,12 @@
 			padding-top: var(--unit-large);
 			padding-bottom: var(--unit-large);
 
-			h1,
-			h2,
-			h3,
-			h4,
-			h5,
-			h6 {
+			> h2,
+			 > h3,
+			 > h4,
+			 > h5,
+			 > h6,
+			> h1 {
 				&:first-child {
 					margin-bottom: var(--unit-large);
 				}
@@ -79,12 +79,12 @@
 			padding-top: var(--unit-xlarge);
 			padding-bottom: var(--unit-xlarge);
 
-			h1,
-			h2,
-			h3,
-			h4,
-			h5,
-			h6 {
+			> h2,
+			 > h3,
+			 > h4,
+			 > h5,
+			 > h6,
+			> h1 {
 				&:first-child {
 					margin-bottom: var(--unit-xlarge);
 				}
@@ -101,12 +101,12 @@
 			padding-top: var(--unit-xxlarge);
 			padding-bottom: var(--unit-xxlarge);
 
-			h1,
-			h2,
-			h3,
-			h4,
-			h5,
-			h6 {
+			> h2,
+			 > h3,
+			 > h4,
+			 > h5,
+			 > h6,
+			> h1 {
 				&:first-child {
 					margin-bottom: var(--unit-xxlarge);
 				}
